Add SortOrder enum and implement station ordering

--- a/cityBikeApp/Components/SearchResultDropDown.razor
+++ b/cityBikeApp/Components/SearchResultDropDown.razor
@@ -2,7 +2,7 @@
 
 @if (IsActive && Stations != null)
 {
-    <div class="absolute mt-2 w-full sm:w-3/4 md:w-1/2 lg:w-1/4 max-h-[220px] overflow-auto bg-white shadow-lg rounded-md">
+    <div class="absolute mt-12 w-2/5 max-h-[220px] overflow-auto bg-white shadow-lg rounded-md">
     <ul class="divide-y divide-gray-300">
         @foreach (var station in Stations.Take(5))
             {
