--- a/cityBikeApp/Pages/StationListPage.razor
+++ b/cityBikeApp/Pages/StationListPage.razor
@@ -9,7 +9,8 @@
             <p class="text-gray-500">Find the best station for your citybike needs.</p>
         </div>
         <button
-            class="my-auto ml-auto shrink-0 bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-full">
+            class="my-auto ml-auto shrink-0 bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-full"
+            @onclick="ToggleSortOrder">
             A-Z / Z-A
         </button>
     </div>
@@ -26,13 +27,14 @@
         }
         else
         {
-            <div class="grid grid-cols-3 gap-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 @foreach (var station in StationService.FilterStations(searchTerm))
                 {
                     <NavLink href="@($"/station/{station.Id}")">
                         <div class="rounded-lg border bg-white text-neutral-800 shadow-sm">
                             <div class="flex flex-col space-y-1.5 p-6">
-                                <h3 class="text-2xl font-semibold whitespace-nowrap leading-none tracking-tight">
+                                <h3
+                                    class="text-2xl py-2 font-semibold whitespace-nowrap leading-none tracking-tight overflow-hidden">
                                     @station.StationName
                                 </h3>
                                 <p class="text-sm text-neutral-600">
@@ -52,4 +54,10 @@
 
 @code {
     private string searchTerm = string.Empty;
+    private SortOrder sortOrder = SortOrder.Descending;
+    private void ToggleSortOrder()
+    {
+        sortOrder = sortOrder == SortOrder.Ascending ? SortOrder.Descending : SortOrder.Ascending;
+        StationService.OrderStationsByName(sortOrder);
+    }
 }
