--- a/cityBikeApp/Components/NavBar.razor
+++ b/cityBikeApp/Components/NavBar.razor
@@ -1,5 +1,4 @@
-﻿<header
-    class="flex h-20 w-full font-body shrink-0 items-center px-2 md:px-6 bg-blue-500 text-white justify-between z-10">
+﻿<header class="flex h-20 w-full font-body items-center px-2 md:px-6 bg-blue-500 text-white justify-between z-10">
     <NavLink href="/" class="flex items-center sm:gap-2">
         <BikeIcon CssClass="hidden sm:block sm:h-12 sm:w-12" />
         <span class="text-3xl font-extrabold md:gap-2">CityBike</span>
