--- a/cityBikeApp/Layouts/MainLayout.razor
+++ b/cityBikeApp/Layouts/MainLayout.razor
@@ -1,9 +1,11 @@
 ﻿@inherits LayoutComponentBase
 @using cityBikeApp.Components
 
-<div class="flex flex-col h-screen w-screen bg-slate-100" style="padding-top: env(safe-area-inset-top);">
+<div class="flex flex-col h-screen w-screen bg-slate-100">
     <!-- NavBar -->
-    <NavBar />
+    <header class="flex-shrink-0">
+        <NavBar />
+    </header>
 
     <!-- Body -->
     <main class="flex-grow">
@@ -12,6 +14,6 @@
 
     <!-- Footer -->
     <footer class="flex-shrink-0">
-
+        <Footer />
     </footer>
 </div>
