--- a/cityBikeApp/Pages/StationDetailsPage.razor
+++ b/cityBikeApp/Pages/StationDetailsPage.razor
@@ -1,20 +1,21 @@
 ﻿@page "/station/{stationId:int}"
 @inject StationService StationService
 
-<h3>StationDetailsPage</h3>
-<ul>
-    <li>@Details?.Station?.StationName</li>
-    <li>@Details?.Station?.StationAddress</li>
-    <li>Started Journeys: @Details?.StartedJourneysCount</li>
-    <li>Finished Journeys: @Details?.EndedJourneysCount</li>
-    @if (Details?.PeakTimes != null)
-    {
+<section class="w-full py-12">
+    <ul>
+        <li>@Details?.Station?.StationName</li>
+        <li>@Details?.Station?.StationAddress</li>
+        <li>Started Journeys: @Details?.StartedJourneysCount</li>
+        <li>Finished Journeys: @Details?.EndedJourneysCount</li>
+        @* @if (Details?.PeakTimes != null)
+        {
         foreach (var peakTime in Details.PeakTimes)
         {
-            <li>@peakTime.Hour @peakTime.Count</li>
+        <li>@peakTime.Hour @peakTime.Count</li>
         }
-    }
-</ul>
+        } *@
+    </ul>
+</section>
 
 
 @code {
