--- a/cityBikeApp/Pages/_Host.cshtml
+++ b/cityBikeApp/Pages/_Host.cshtml
@@ -23,7 +23,7 @@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
-<body>
+<body class="bg-slate-100">
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
