--- a/cityBikeApp/Pages/StationListPage.razor
+++ b/cityBikeApp/Pages/StationListPage.razor
@@ -17,7 +17,7 @@
     <div class="mt-6">
         <input
             class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-            type="text" @oninput="e => searchTerm = e.Value as string ?? string.Empty"
+            type="text" @oninput="e => SearchTerm = e.Value as string ?? string.Empty"
             placeholder="Search for a station">
     </div>
     <div class="mt-6">
@@ -28,7 +28,7 @@
         else
         {
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-                @foreach (var station in StationService.FilterStations(searchTerm))
+                @foreach (var station in StationService.FilterStations(SearchTerm, currentPage))
                 {
                     <NavLink href="@($"/station/{station.Id}")">
                         <div class="rounded-lg border bg-white text-neutral-800 shadow-sm">
@@ -45,6 +45,16 @@
                     </NavLink>
                 }
             </div>
+            <div class="flex justify-around w-1/2 mx-auto my-10">
+                <button disabled="@(currentPage <= 1)" @onclick="() => currentPage--"
+                    class="rounded-lg bg-blue-500 text-white disabled:bg-slate-500 p-3 shadow">
+                    Previous
+                </button>
+                <button disabled="@(currentPage >= totalPages)" @onclick="() => currentPage++"
+                    class="rounded-lg bg-blue-500 text-white disabled:bg-slate-500 p-3 shadow">
+                    Next
+                </button>
+            </div>
         }
     </div>
 </section>
@@ -53,8 +63,31 @@
 
 
 @code {
-    private string searchTerm = string.Empty;
+    private string _searchTerm = string.Empty;
+    public string SearchTerm
+    {
+        get => _searchTerm;
+        set
+        {
+            if (_searchTerm != value)
+            {
+                _searchTerm = value;
+                totalPages = StationService.GetStationsCount(_searchTerm) / 20 + 1;
+                if (currentPage > totalPages)
+                {
+                    currentPage = totalPages;
+                }
+            }
+        }
+    }
     private SortOrder sortOrder = SortOrder.Descending;
+    int currentPage = 1;
+    int totalPages;
+    protected override void OnInitialized()
+    {
+        totalPages = StationService.GetStationsCount(_searchTerm) / 20 + 1;
+    }
+
     private void ToggleSortOrder()
     {
         sortOrder = sortOrder == SortOrder.Ascending ? SortOrder.Descending : SortOrder.Ascending;
