Add Radzen.Blazor and Bootstrap CSS files

--- a/cityBikeApp/Pages/_Host.cshtml
+++ b/cityBikeApp/Pages/_Host.cshtml
@@ -20,6 +20,8 @@
         rel="stylesheet">
     @* <script src="https://cdn.tailwindcss.com"></script> *@
     <link href="css/tailwind.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 
@@ -38,6 +40,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
