Update service injection in razor pages

--- a/cityBikeApp/Pages/HomePage.razor
+++ b/cityBikeApp/Pages/HomePage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using cityBikeApp.Components
-@inject StationService StationService
+@inject cityBikeApp.Services.IStationService StationService
 
 <section class="w-full py-12">
     <div class="max-w-screen-2xl mx-auto px-4 md:px-6">
