--- a/cityBikeApp/Pages/JourneysListPage.razor
+++ b/cityBikeApp/Pages/JourneysListPage.razor
@@ -1,4 +1,4 @@
-﻿@inject JourneysService JourneyService
+﻿@inject cityBikeApp.Services.JourneysService JourneyService
 @using cityBikeApp.Models
 @using cityBikeApp.Components
 @page "/journeys"
