--- a/cityBikeApp/Pages/StationDetailsPage.razor
+++ b/cityBikeApp/Pages/StationDetailsPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/station/{stationId:int}"
-@inject StationService StationService
+@inject cityBikeApp.Services.IStationService StationService
 @using cityBikeApp.Components
 
 <section class="container mx-auto py-12 px-2 md:px-8 lg:px-12">
