--- a/cityBikeApp/Pages/StationListPage.razor
+++ b/cityBikeApp/Pages/StationListPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/stations"
-@inject StationService StationService
+@inject cityBikeApp.Services.IStationService StationService
 
 
 <section class="container mx-auto px-4 py-8">
