Update JourneysListPage.razor to use IJourneysService

--- a/cityBikeApp/Pages/JourneysListPage.razor
+++ b/cityBikeApp/Pages/JourneysListPage.razor
@@ -1,4 +1,4 @@
-﻿@inject cityBikeApp.Services.JourneysService JourneyService
+﻿@inject cityBikeApp.Services.IJourneysService JourneyService
 @using cityBikeApp.Models
 @using cityBikeApp.Components
 @page "/journeys"
